# UR3-kinect-woxel-map

kinect_description/urdf/: kinect.urdf.xacro
my_robot/: CMakeLists.txt  package.xml
my_robot/gazebo_models/: my_world.launch  my_world.world
my_robot/gazebo_models/mala_przeszkoda/: model.config  model.sdf
my_robot/launch/: my_robot.launch  my_robot_rviz.rviz
my_robot/urdf/: my_robot.urdf.xacro
